获取当前用户接口完成。目前登录校验加密密码还有问题，先注释
