# docs/swagger.yaml
@@ -1,13 +1,41 @@
 definitions:
   models.UserModel:
     type: object
-host: localhost:8080
 info:
   contact: {}
-  description: RealWorld 项目后端 API 文档
+  description: RealWorld 后端 API 文档
   title: RealWorld API
   version: "1.0"
 paths:
+  /api/user:
+    get:
+      consumes:
+      - application/json
+      description: 根据token获取当前用户信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功，返回当前用户信息
+          schema:
+            $ref: '#/definitions/models.UserModel'
+        "401":
+          description: 未授权
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 服务器内部错误
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: 获取当前用户信息
+      tags:
+      - users
   /api/users/login:
     post:
       consumes:
@@ -84,4 +112,9 @@ paths:
       summary: 注册用户
       tags:
       - users
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
